# ganttdsl

./: .gitignore  README.md  example.py  experiment.txt  prompt.md  pyproject.toml  server.py  tutorial.md
.github/workflows/: python-package.yml
src/ganttdsl/: dsl.py  streamlit.py
tests/: test_dsl.py
