[project]
name = "ganttdsl"
version = "0.1.0"
description = "GanttDSL is a Python-based Domain-Specific Language (DSL) designed to simplify project planning and scheduling for software engineering teams. With GanttDSL, you can define tasks, teams, and dependencies in a clear, literate programming style, and generate detailed project views in Markdown or visualize timelines with PlantUML-compatible Gantt charts."
authors = [
    {name = "malberto", email = "robbyetor@gmail.com"},
]
dependencies = ["cpmpy>=0.9.23", "pandas>=2.2.3", "tabulate>=0.9.0", "streamlit>=1.40.2", "altair>=5.5.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pdbpp>=0.10.3",
    "pytest>=8.3.4",
    "ipython>=8.30.0",
]

[tool.pdm.scripts]
lint = "flake8"
test = "pytest"
debug = "pytest --pdb"
all = {composite = ["lint", "test"]}